// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrator getDelta() should detect tables to alter 1`] = `
Object {
  "eq_e_important_person": Object {
    "add": Array [
      Object {
        "generated": "increment",
        "isArray": false,
        "isGenerated": true,
        "isNullable": false,
        "isPrimary": true,
        "isUnique": true,
        "length": "",
        "name": "idInternal",
        "type": "integer",
        "unsigned": true,
        "zerofill": false,
      },
      Object {
        "generationStrategy": "uuid",
        "isArray": false,
        "isGenerated": true,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": true,
        "length": undefined,
        "name": "id",
        "type": "uuid",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": true,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": 255,
        "name": "tags",
        "type": "varchar",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": true,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": undefined,
        "name": "lucky_numbers",
        "type": "integer",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": undefined,
        "name": "birth_date",
        "type": "timestamp",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": undefined,
        "name": "has_pets",
        "type": "boolean",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": undefined,
        "name": "partner",
        "type": "integer",
        "unsigned": false,
        "zerofill": false,
      },
    ],
    "delete": Array [
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": false,
        "isPrimary": false,
        "isUnique": false,
        "length": 255,
        "name": "something_else",
        "type": "varchar",
        "unsigned": false,
        "zerofill": false,
      },
    ],
  },
  "eq_e_pet": Object {
    "add": Array [
      Object {
        "generated": "increment",
        "isArray": false,
        "isGenerated": true,
        "isNullable": false,
        "isPrimary": true,
        "isUnique": true,
        "length": "",
        "name": "idInternal",
        "type": "integer",
        "unsigned": true,
        "zerofill": false,
      },
      Object {
        "generationStrategy": "uuid",
        "isArray": false,
        "isGenerated": true,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": true,
        "length": undefined,
        "name": "id",
        "type": "uuid",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": false,
        "isPrimary": false,
        "isUnique": false,
        "length": 255,
        "name": "nickname",
        "type": "varchar",
        "unsigned": false,
        "zerofill": false,
      },
    ],
    "delete": Array [
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": false,
        "isPrimary": false,
        "isUnique": false,
        "length": 255,
        "name": "something_else",
        "type": "varchar",
        "unsigned": false,
        "zerofill": false,
      },
    ],
  },
}
`;

exports[`Migrator getDelta() should detect tables to create 1`] = `
Array [
  Object {
    "columns": Array [
      Object {
        "generated": "increment",
        "isArray": false,
        "isGenerated": true,
        "isNullable": false,
        "isPrimary": true,
        "isUnique": true,
        "length": "",
        "name": "idInternal",
        "type": "integer",
        "unsigned": true,
        "zerofill": false,
      },
      Object {
        "generationStrategy": "uuid",
        "isArray": false,
        "isGenerated": true,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": true,
        "length": undefined,
        "name": "id",
        "type": "uuid",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": false,
        "isPrimary": false,
        "isUnique": false,
        "length": 255,
        "name": "full_name",
        "type": "varchar",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": true,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": 255,
        "name": "tags",
        "type": "varchar",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": true,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": undefined,
        "name": "lucky_numbers",
        "type": "integer",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": undefined,
        "name": "birth_date",
        "type": "timestamp",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": undefined,
        "name": "has_pets",
        "type": "boolean",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": false,
        "length": undefined,
        "name": "partner",
        "type": "integer",
        "unsigned": false,
        "zerofill": false,
      },
    ],
    "name": "eq_e_important_person",
  },
  Object {
    "columns": Array [
      Object {
        "generated": "increment",
        "isArray": false,
        "isGenerated": true,
        "isNullable": false,
        "isPrimary": true,
        "isUnique": true,
        "length": "",
        "name": "idInternal",
        "type": "integer",
        "unsigned": true,
        "zerofill": false,
      },
      Object {
        "generationStrategy": "uuid",
        "isArray": false,
        "isGenerated": true,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": true,
        "length": undefined,
        "name": "id",
        "type": "uuid",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": false,
        "isPrimary": false,
        "isUnique": false,
        "length": 255,
        "name": "nickname",
        "type": "varchar",
        "unsigned": false,
        "zerofill": false,
      },
    ],
    "name": "eq_e_pet",
  },
  Object {
    "columns": Array [
      Object {
        "generated": "increment",
        "isArray": false,
        "isGenerated": true,
        "isNullable": false,
        "isPrimary": true,
        "isUnique": true,
        "length": "",
        "name": "idInternal",
        "type": "integer",
        "unsigned": true,
        "zerofill": false,
      },
      Object {
        "generationStrategy": "uuid",
        "isArray": false,
        "isGenerated": true,
        "isNullable": true,
        "isPrimary": false,
        "isUnique": true,
        "length": undefined,
        "name": "id",
        "type": "uuid",
        "unsigned": false,
        "zerofill": false,
      },
      Object {
        "isArray": false,
        "isGenerated": false,
        "isNullable": false,
        "isPrimary": false,
        "isUnique": false,
        "length": 255,
        "name": "name",
        "type": "varchar",
        "unsigned": false,
        "zerofill": false,
      },
    ],
    "name": "eq_e_tool",
  },
  Object {
    "columns": Array [
      Object {
        "isNullable": false,
        "isPrimary": true,
        "name": "self",
        "type": "integer",
      },
      Object {
        "isNullable": false,
        "isPrimary": true,
        "name": "rel",
        "type": "integer",
      },
    ],
    "name": "eq_ref_ba4ed80327568d335915e4452eb0703a",
  },
  Object {
    "columns": Array [
      Object {
        "isNullable": false,
        "isPrimary": true,
        "name": "self",
        "type": "integer",
      },
      Object {
        "isNullable": false,
        "isPrimary": true,
        "name": "rel",
        "type": "integer",
      },
    ],
    "name": "eq_ref_b1fb992f85e4af08fa10b2256811daae",
  },
]
`;
